fix layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@
     .contact {
       padding: 3% 10%;
       padding-top: 100px !important;
-      text-align: center;
+      text-align: center !important;
     }
 
     .colored-section {
